// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CardComponent /> snapshot: renders default state 1`] = `
<DocumentFragment>
  <article
    data-testid="card"
  >
    <a
      href="/url/to"
    >
      <header
        data-testid="cardHeading"
      >
        <h2
          class=""
          data-testid="heading"
        >
          Sample beer
        </h2>
        <h3
          class=""
          data-testid="heading"
        >
          Beer subtitle
        </h3>
      </header>
    </a>
  </article>
</DocumentFragment>
`;

exports[`<CardComponent /> snapshot: renders with image 1`] = `
<DocumentFragment>
  <article
    data-testid="card"
  >
    <a
      href="/url/to"
    >
      <header
        data-testid="cardHeading"
      >
        <h2
          class=""
          data-testid="heading"
        >
          Sample beer
        </h2>
        <h3
          class=""
          data-testid="heading"
        >
          Beer subtitle
        </h3>
        <img
          alt="Sample beer"
          src="https://via.placeholder.com/300/09f/fff.png"
        />
      </header>
    </a>
  </article>
</DocumentFragment>
`;

exports[`<CardComponent /> snapshot: renders without link 1`] = `
<DocumentFragment>
  <article
    data-testid="card"
  >
    <header
      data-testid="cardHeading"
    >
      <h2
        class=""
        data-testid="heading"
      >
        Sample beer
      </h2>
      <h3
        class=""
        data-testid="heading"
      >
        Beer subtitle
      </h3>
    </header>
  </article>
</DocumentFragment>
`;
